[project]
name = "vllm-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.3.0",
    "hf-transfer>=0.1.9",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "peft>=0.18.1",
    "trl>=0.24.0",
    "unsloth>=2026.1.4",
    "vllm==0.11.0",
    "transformers==4.57.6"
]
